Tratamento de erros aprimorado, comentarios e assets adicionados
