# src/models/item/item_controller.js
@@ -1,9 +1,25 @@
 const Item = require("../item/Item");
 require("../../config/associations");
 
+
 const createItem = async (req, res) => {
+  /*  
+    #swagger.tags = ['Items']
+    #swagger.parameters['item'] = {
+      in: 'body',
+      schema: {
+          $id_pedido: 1,  
+          $id_produto: 1,
+          $preco: 29.90,
+          $quantidade: 10
+      }
+    } 
+  */
   try {
     const mappedItem = mapItemFields(req.body);
+    if(!await Order.findByPk(mappedItem.order_id, {})){
+      return res.status(404).json({ error: "Id do pedido não encontrado" });
+    };
     await Item.create({
       order_id: mappedItem.order_id,
       product_id: mappedItem.product_id,
@@ -18,13 +34,20 @@ const createItem = async (req, res) => {
 };
 
 const deleteItemById = async (req, res) => {
+  /* 
+    #swagger.tags = ['Items']
+    #swagger.parameters['id'] = { description: 'Id do Item' }
+  */
   try {
     const id = parseInt(req.params.id);
-    await Item.destroy({
+    const deletedCount = await Item.destroy({
       where: {
         id: id,
       },
     });
+    if (deletedCount === 0) {
+      return res.status(404).json({ error: "Item não encontrado" });
+    }
     res.status(204).end();
   } catch (error) {
     console.log(error);
@@ -33,15 +56,34 @@ const deleteItemById = async (req, res) => {
 };
 
 const updateItemById = async (req, res) => {
+  /* 
+    #swagger.tags = ['Items']
+    #swagger.parameters['id'] = { description: 'Id do Item' } 
+    #swagger.parameters['item'] = {
+      in: 'body',
+      schema: {
+          $id_pedido: 1,  
+          $id_produto: 1,
+          $preco: 29.90,
+          $quantidade: 10
+      }
+    } 
+  */
   try {
     const id = parseInt(req.params.id);
     const mappedItem = mapItemFields(req.body);
-    await Item.update(id, {
+    if(!await Order.findByPk(mappedItem.order_id, {})){
+      return res.status(404).json({ error: "Id do pedido não encontrado" });
+    };
+    const item = await Item.update(id, {
       order_id: mappedItem.order_id,
       product_id: mappedItem.product_id,
       price: mappedItem.price,
       quantity: mappedItem.quantity,
     });
+    if (!item) {
+      return res.status(404).json({ error: "Item não encontrado" });
+    }
     res.status(200).json({ message: "Item atualizado com sucesso" });
   } catch (error) {
     console.log(error);
